# EFAAR_benchmarking

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile.test  LICENSE  MANIFEST.in  README.md  VERSION  cookiecutter.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: publish.yaml  quality.yaml  test.yaml
benchmark_annotations/: CORUM.txt  Reactome.txt
efaar_benchmarking/: benchmarking.py  constants.py  core.py  data_loading.py  efaar.py  plotting.py  utils.py
efaar_benchmarking/benchmark_annotations/: CORUM.txt  CORUM_clusters.tsv  HuMAP.txt  LICENSE  Reactome.txt  SIGNOR.txt  StringDB.txt  c5.go.v2023.2.Hs.symbols.gmt
efaar_benchmarking/expression_data/: HeLa_expression.csv  U2OS_expression.csv
notebooks/: compare_maps.ipynb  jump_map_building.ipynb  map_building_benchmarking.ipynb  map_evaluation_comparison.ipynb  periscope_map_building.ipynb  replogle_map_building.ipynb
notebooks/data/: GWPS_aggr_scVI128-TVN_map.pkl  GWPS_map_cache.pkl  GWPS_metadata.pkl  JUMP_aggr_CP-PCA128-TVN_map.pkl  JUMP_pre_agg_metadata.pkl  LICENSE  PERISCOPE_aggr_CP-PCA128-TVN_map.pkl  PERISCOPE_pre_agg_metadata.pkl  cpg0016_map_cache.pkl  cpg0016_metadata.pkl  cpg0021_map_cache.pkl  cpg0021_metadata.pkl  hg38_scaffolds.tsv  periscope_A549_sig_perts_whole_cell.tsv
requirements/: dev_3.10.txt  dev_3.11.txt  dev_3.12.txt  dev_3.8.txt  dev_3.9.txt  main_3.10.txt  main_3.11.txt  main_3.12.txt  main_3.8.txt  main_3.9.txt
template-tests/: requirements.txt  test.sh  test_generate.py
tests/: test_benchmarking.py  test_core.py  test_efaar.py
{{cookiecutter.repo_name}}/: README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/: pull_request_template.md
{{cookiecutter.repo_name}}/tests/: test_core.py
{{cookiecutter.repo_name}}/{{cookiecutter.python_name}}/: cli.py  core.py
