[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages]
find = {}

[project]
name = "efaar_benchmarking"
authors = [
    {name = "Recursion Pharmaceuticals", email = "devs@recursionpharma.com"},
]
readme = "README.md"
classifiers = [
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
keywords=["efaar_benchmarking"]
requires-python = ">=3.11"
dynamic = [
	"version",
]
dependencies = [
    "scikit-learn",
    "pandas",
	"numpy",
	"matplotlib",
	"matplotlib_venn",
	"upsetplotly",
	"seaborn",
	"scvi-tools",
	"wget",
	"geomloss",
	"torch",
	"joblib",
	"scipy",
 	"s3fs",
]

[project.optional-dependencies]
dev = [
	"bandit[toml]",
	"black",
	"coverage",
	"docstr-coverage",
	"flake8",
	"isort",
	"mypy",
	"pre-commit",
	"pytest",
	"pytest-cov",
	"pyupgrade",
	"radon",
	"types-pkg_resources",
	"types-setuptools",
	"tox",
	"validate-pyproject[all]",
	"jupyterlab",
]


[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
addopts = [
	"--ignore", "setup.py",
	"--ignore", "run_test.py",
	"--tb", "native",
	"--strict-markers",
	"--durations=20",
	"--cov-report", "term-missing",
	"--cov=efaar_benchmarking",
]
testpaths = ["tests"]
env = [
	"PYTHONHASHSEED=0",
]

[tool.mypy]
files = "efaar_benchmarking"
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
# strict = true
allow_untyped_calls = true

[tool.isort]
profile = "black"
py_version = "auto"
line_length = 120

[tool.bandit]
exclude = "tests"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = ["build", "tests", ".asv", ".git", "venv", "migrations/versions", ".tox"]

[tool.ruff]
select = ["E", "F"]
ignore = []
exclude = [".bzr", ".direnv", ".eggs", ".git", ".mypy_cache", ".nox", ".ruff_cache", ".tox", ".venv", "__pypackages__", "_build", "build", "dist", "venv"]
line-length = 120
target-version = "py311"
